--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'distant_galaxy';
-    src: url('./DISTGRG_-webfont.woff') format('woff');         
+    src: url('./fonts/DISTGRG_-webfont.woff') format('woff');         
     font-weight: normal;
     font-style: normal;
 }
@@ -28,7 +28,7 @@ body {
 }
 
 .background-div {
-    background-image: url(./wallpaper.jpg);
+    background-image: url(./images/wallpaper.jpg);
     background-size: cover;
     height: calc(100vh - 72px);
     width: 100vw;
