--- a/src/styles.css
+++ b/src/styles.css
@@ -56,11 +56,63 @@ body {
 }
 
 .main {
-    display: flex;
+    background-color: #EEEEEE;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px; */
+}
+
+.card-organizer {
+    display: grid;
+    place-items: center;
     gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    padding: 5px;
+}
+
+.content-title {
+    text-align: center;
+    padding: 20px;
+    font-size: 2.6rem;
+}
+
+.card {
+    height: 270px;
+    width: 320px;
+    border: 3px solid #1F2738;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.element-name {
+    width: 316px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.2rem;
+    background-color: #1F2738;
+    color: white;
+    text-align: center;
+    overflow: hidden;
+}
+
+.element-name:hover, .card:hover {
+    background-color: #F56F36;
+    border: 3px solid #F56F36;
+}
+
+.placeholder {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.loading {
+    font-size: 4.0rem;
+    text-align: center;
+    padding: 100px;
 }
 
 .home {
