--- a/src/styles.css
+++ b/src/styles.css
@@ -142,3 +142,36 @@ body {
 .active[data-tab-content] {
     display: block;
 }
+
+@media (max-width: 700px) {
+    body {
+        height: 100vh;
+        display: grid;
+        grid-template-rows: repeat(5, auto) 5fr;
+    }
+
+    .background-div {
+        background-image: none;
+    }
+
+    .header{
+        background-color: #000;
+        color: white;
+        font-size: 1.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .title {
+        font-size: 2.0rem;
+        border-bottom: 2px solid white;
+    }
+
+    .pages {
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+}
